@@ -8,26 +8,25 @@ import org.springframework.data.jpa.domain.Specification;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class GenericRsqlSpecBuilder<T> {
 
     public Specification<T> createSpecification(Node node) {
-        if (node instanceof LogicalNode) {
-            return createSpecification((LogicalNode) node);
+        if (node instanceof LogicalNode logicalNode) {
+            return createSpecification(logicalNode);
         }
-        if (node instanceof ComparisonNode) {
-            return createSpecification((ComparisonNode) node);
+        if (node instanceof ComparisonNode comparisonNode) {
+            return createSpecification(comparisonNode);
         }
         return null;
     }
 
     public Specification<T> createSpecification(LogicalNode logicalNode) {
-        List<Specification> specs = logicalNode.getChildren()
+        List<Specification<T>> specs = logicalNode.getChildren()
                 .stream()
-                .map(node -> createSpecification(node))
+                .map(this::createSpecification)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         Specification<T> result = specs.get(0);
         if (logicalNode.getOperator() == LogicalOperator.AND) {
@@ -44,13 +43,12 @@ public class GenericRsqlSpecBuilder<T> {
     }
 
     public Specification<T> createSpecification(ComparisonNode comparisonNode) {
-        Specification<T> result = Specification.where(
+        return Specification.where(
                 new GenericRsqlSpecification<T>(
                         comparisonNode.getSelector(),
                         comparisonNode.getOperator(),
                         comparisonNode.getArguments()
                 )
         );
-        return result;
     }
 }
